# pyckmeans-gui-backend

./: pyproject.toml
pyckmeans_gui_backend/: __init__.py  defaults.py
pyckmeans_gui_backend/app/: __init__.py  base.py  config.py
pyckmeans_gui_backend/app/api/: __init__.py  file_explorer.py
pyckmeans_gui_backend/app/api/file_explorer/: __init__.py  file_explorer.py
pyckmeans_gui_backend/app/modules/file_explorer/: __init__.py
pyckmeans_gui_backend/app/modules/file_explorer/tests/: test_file_explorer.py
pyckmeans_gui_backend/app/static/: index.html
pyckmeans_gui_backend/app/static/css/: 334.925753af.css  app.8feedef4.css
pyckmeans_gui_backend/app/static/js/: 334.a9b6cb6a.js  app.647f1c6a.js  vendor.f6032bf9.js
pyckmeans_gui_backend/cli/: __init__.py
pyckmeans_gui_backend/static/: index.html
pyckmeans_gui_backend/static/css/: 105.814e5d34.css  29.3e3e71da.css  app.f88973a1.css
pyckmeans_gui_backend/static/js/: 105.98330f3f.js  29.3fb43bba.js  431.df5b3af7.js  app.9a464087.js
