[tool.poetry]
name = "pyckmeans-gui-backend"
version = "0.1.0"
description = "The backend for pyckmeans-gui"
authors = ["Tankred Ott <ott.tankred@gmail.com>"]

[tool.poetry.scripts]
pyckmeans-gui = 'pyckmeans_gui_backend.cli:cli'

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
tornado = "^6.2"
cloup = "^1.0.0"
pyckmeans = "^0.9.4"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
