[tool.poetry]
name = "fastapi_filebrowser"
version = "0.1.0"
description = ""
authors = ["Tankred Ott <ott.tankred@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = "^0.79.0"
pyckmeans = "^0.9.4"
cloup = "^1.0.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyckmeans-gui = 'pyckmeans_gui_backend.cli:cli'
